# vector-store

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.worker  PLAN.md  README.md  curl.sh  demo_response.json  docker-compose.yml  embed.sh  entrypoint.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: check.yml  run.yml
apps/api/: dependencies.py  main.py  middleware.py  schemas.py
apps/api/routes/: __init__.py  documents.py  files.py  ingestion.py  query.py  vector_stores.py
apps/api/schemas/: __init__.py  files.py  query.py  vector_stores.py
apps/api/static/: env-util.html  landing.html  playground.html
apps/worker/: __init__.py  __main__.py  arq_settings.py  processor.py
src/: main.py
src/agents/: __init__.py
src/agents/query_agent/: __init__.py  agent.py  prompts.py  schemas.py
src/config/: settings.py
src/database/: __init__.py  migrate.py  models.py  session.py
src/database/repositories/: __init__.py  (+3 more)
src/generation/: __init__.py
src/graph/: __init__.py
src/indexing/: __init__.py  indexer.py
src/ingestion/: __init__.py
src/llm/: __init__.py  openai.py
src/memory/: __init__.py
src/observability/: logging.py
src/retrieval/: __init__.py  factory.py  protocol.py
src/shared/: __init__.py  base.py  events.py  types.py
src/storage/: __init__.py
src/vector_stores/: __init__.py  cron.py  filter_eval.py  models.py  repository.py  scheduler.py  service.py  worker.py
tests/: test_api_endpoints.py
tests/unit/: test_media_processor.py  test_pdf_diagram.py
(+70 files in other folders)
