[project]
name = "vector-store"
version = "0.1.0"
description = "Enterprise-grade RAG platform targeting 10M+ documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # ── Core (shared by API + worker) ──────────────────────────────
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.14.0",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.50",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.9.1",
    "langgraph>=0.4.5",
    "langsmith>=0.3.33",
    "redis>=5.2.1",
    "structlog>=25.4.0",
    "pydantic>=2.13.4",
    "boto3>=1.38.0",
    "arq>=0.28.0",
    "pymupdf>=1.27.2.3",
    # ── API-only (included via `--extra api`) ─────────────────────
    # fastapi, uvicorn, python-multipart live in [api] extras below
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.18",
]
worker = [
    # ── Heavy / platform deps ──
    "neo4j>=5.28.0",
    "markitdown[all]>=0.1.5",
    "langchain-docling>=2.0.0",
    "docling>=2.97.0",
    "pypdf>=6.13.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "docling-parse>=6.2.0",
    "sentence-transformers>=5.5.1",
]
dev = [
    "ruff>=0.11.13",
    "pyright>=1.1.399",
]
rerank = [
    "sentence-transformers>=5.5.1",
]
